add demo country province and regency
